# berlekamp_massey_coder

./: .gitignore  README.md  pyproject.toml
berlekamp_massey_coder/: __main__.py  gf.py  help_gf.py  rs_decoding.py  rs_encoding.py
docs/source/: .api.rst.swp  Welcome  coding.rst  conf.py  gf.rst  help_gf.rst  index.rst  rs_decode.rst  start.rst
