[tool.poetry]
name = "berlekamp_massey_coder"
version = "0.1.0"
description = ""
authors = ["mariohuq <15021607+mariohuq@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
